# some-bots

./: .dockerignore  .env.example  .gitignore  LICENSE  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/workflows/: nightly-db-integration.yml
docs/: production-plan.md  sprint1-orchestrator-decisions.md  sprint2-manual-validation-email-format.md
services/data-ingestion/: Dockerfile  requirements-dev.txt  requirements.txt
services/data-ingestion/data/: nws_gridpoints.json
services/data-ingestion/src/: main.py
services/data-ingestion/tests/: conftest.py  test_cities.py  test_errors.py  test_factories.py  test_forecast_result.py  test_integration_db.py  test_kalshi_client.py  test_kalshi_ingestion.py  test_logging.py  test_main.py  test_models.py  test_seed.py  test_settings.py  test_weather_client_base.py  test_weather_clients.py  test_weather_ingestion.py
services/notification-service/: Dockerfile  requirements.txt
services/notification-service/src/: main.py
services/notification-service/tests/: test_main.py
services/prediction-engine/: Dockerfile  requirements.txt
services/prediction-engine/src/: config.py  main.py
services/prediction-engine/tests/: conftest.py  factories.py  test_config.py  test_fees.py  test_integration_db.py  test_main_runtime.py  test_main_smoke.py  (+6 more)
shared/: pyproject.toml
shared/config/: __init__.py  cities.py  errors.py  logging.py  settings.py
shared/db/: __init__.py  enums.py  models.py  seed.py  session.py
shared/db-migrations/: env.py
(+42 files in other folders)
