[project]
name = "kalshi-weather-bot"
version = "0.1.0"
description = "Kalshi weather trading recommendation bot"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = [
    "services/data-ingestion/tests",
    "services/prediction-engine/tests",
    "services/notification-service/tests",
]
pythonpath = [".", "services/data-ingestion"]
addopts = "-v --tb=short -m 'not integration and not db'"
markers = [
    "db: tests that require a running PostgreSQL instance",
    "integration: integration tests requiring external services (DB, etc.)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
